Criando apresentation e prices

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinPlanner - Home</title>
+    <title>FinPlanner</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
 </head>
 <body>
@@ -77,9 +77,149 @@
                 </div>
             </div>
         </section>
+        
+        <section id="container-apresentation">
+            <div class="apresentation-slide apresentation-reverse">
+                <div class="apresentation-content">
+                    <h3>A Gestão Financeira Completa na Palma da Sua Mão!</h3>
+                    <p>Nosso app oferece funcionalidades exclusivas como relatórios detalhados, alertas de despesas e sincronização com contas bancárias. Tudo o que você precisa para um controle financeiro eficiente e personalizado. Baixe agora e experimente!</p>
+                </div>
+                <img src="./assets/imgs/calculatorImagem.jpg" alt="Imagem de gestão financeira">
+            </div>
 
-        <section>
+            <div class="apresentation-slide">
+                <div class="apresentation-content">
+                    <h3>Seu Parceiro Financeiro Inteligente e Confiável!</h3>
+                    <p>Desfrute de uma interface intuitiva, categorização automática de despesas e dicas personalizadas para economizar. Nosso app foi desenvolvido para tornar a gestão do seu dinheiro mais simples e prática. Comece hoje e veja os resultados!</p>
+                </div>
+                <img src="./assets/imgs/PersonInPhoneImagem.jpg" alt="Imagem de pessoa no celular">
+            </div>
 
+            <button id="subscribe-button">
+                Quero me inscrever agora
+            </button>
+        </section>
+
+        <section id="container-prices">
+            <div class="box-prices">
+                <table class="table-prices">
+                    <thead class="table-prices-head">
+                        <tr>
+                            <th></th>
+                            <th>Standard<br><br><span>Grátis</span></th>
+                            <th>Pro<br><br><span>R$29,90</span></th>
+                            <th>Pro+<br><br><span>R$49,90</span></th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="table-prices-body">
+                        <tr>
+                            <th>Rastreamento de despesas</th>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Relatórios mensais</th>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Alertas de contas</th>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Suporte por e-mail</th>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Sincronização bancária</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Relatórios avançados</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Orçamento personalizado</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Exportação de dados</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Sem anúncios</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Suporte prioritário</th>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>consultoria financeira</th>
+                            <td></td>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>planejamento de investimentos</th>
+                            <td></td>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th>Integração com outros apps</th>
+                            <td></td>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+                        
+                        <tr>
+                            <th>Backup na nuvem</th>
+                            <td></td>
+                            <td></td>
+                            <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
+                        </tr>
+
+                        <tr>
+                            <th></th>
+                            <td><button class="table-prices-button">Escolher Plano</button></td>
+                            <td><button class="table-prices-button">Escolher Plano</button></td>
+                            <td><button class="table-prices-button">Escolher Plano</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
     </main>
 </body>
