--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header id="cabecalho">
         <div class="title-project">
-            <!-- <img class="logo-project" src="./assets/imgs/logofin.png" alt="Logo FinPlanner"> -->
             <svg class="logo-project" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="rgb(139, 18, 252)" class="bi bi-wallet-fill" viewBox="0 0 16 16">
                 <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v2h6a.5.5 0 0 1 .5.5c0 .253.08.644.306.958.207.288.557.542 1.194.542s.987-.254 1.194-.542C9.42 6.644 9.5 6.253 9.5 6a.5.5 0 0 1 .5-.5h6v-2A1.5 1.5 0 0 0 14.5 2z"/>
                 <path d="M16 6.5h-5.551a2.7 2.7 0 0 1-.443 1.042C9.613 8.088 8.963 8.5 8 8.5s-1.613-.412-2.006-.958A2.7 2.7 0 0 1 5.551 6.5H0v6A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5z"/>
@@ -58,9 +57,9 @@
             </ul>
         </nav>
 
-        <button id="login">
+        <button id="subscribe-home">
             <img src="./assets/imgs/icons/loginIcon.svg" alt="">
-            <p class="text-login">Fazer Login</p>
+            <p class="text-subscribe">Inscreva-se</p>
         </button>
     </header>
 
@@ -94,10 +93,6 @@
                 </div>
                 <img src="./assets/imgs/PersonInPhoneImagem.jpg" alt="Imagem de pessoa no celular">
             </div>
-
-            <button id="subscribe-button">
-                Quero me inscrever agora
-            </button>
         </section>
 
         <section id="container-prices">
@@ -220,7 +215,61 @@
                     </tbody>
                 </table>
             </div>
+
+            <button id="subscribe-button">
+                Quero me inscrever agora
+            </button>
         </section>
+
+        <section id="container-contact">
+            <form id="contact-form">
+                <h4>Contato</h4>
+                <p>Deixe seus dados para estar por dentro de novidades e atualizações do app</p>
+
+                <div class="forms-inputs">
+                    <label for="name">Nome completo:</label>
+                    <input class="forms-input" type="text" name="name" placeholder="Seu nome completo">
+
+                    <label for="age">Idade:</label>
+                    <input class="forms-input" type="number" name="age" placeholder="Sua idade">
+
+                    <label for="email">E-mail:</label>
+                    <input class="forms-input" type="email" name="email" placeholder="Seu melhor e-mail">
+
+                    <label for="phone">Telefone:</label>
+                    <input class="forms-input" type="text" name="phone" placeholder="Telefone para contato">
+                </div>
+
+                <div class="forms-terms">
+                    <div class="form-term">
+                        <label for="optionWhatsapp">Desejo receber as novidades através do WhatsApp</label>
+                        <input type="checkbox" name="optionWhatsapp">
+                    </div>
+    
+                    <div class="form-term">
+                        <label for="optionEmail">Desejo receber as novidades através do E-mail</label>
+                        <input type="checkbox" name="optionEmail">
+                    </div>
+                </div>
+            </form>
+        </section>
+
+        <footer id="rodape">
+            <div class="title-project">
+                <svg class="logo-project" xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="rgb(139, 18, 252)" class="bi bi-wallet-fill" viewBox="0 0 16 16">
+                    <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v2h6a.5.5 0 0 1 .5.5c0 .253.08.644.306.958.207.288.557.542 1.194.542s.987-.254 1.194-.542C9.42 6.644 9.5 6.253 9.5 6a.5.5 0 0 1 .5-.5h6v-2A1.5 1.5 0 0 0 14.5 2z"/>
+                    <path d="M16 6.5h-5.551a2.7 2.7 0 0 1-.443 1.042C9.613 8.088 8.963 8.5 8 8.5s-1.613-.412-2.006-.958A2.7 2.7 0 0 1 5.551 6.5H0v6A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5z"/>
+                  </svg>
+                <h1 class="name-project">finplanner</h1>
+            </div>
+
+            <div class="rodape-texts">
+                <p>2024 © Todos os direitos reservados Finplanner.</p>
+                <div>
+                    <a href="#container-start">Voltar ao Topo<img src="./assets/imgs/icons/arrowUp.svg" alt="Seta para cima"></a>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
