--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="list-navigation">
                 <li class="item-navigation">
-                      <a class="link-navigation" href="">
+                      <a class="link-navigation" href="#container-start">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(182, 182, 182)" class="bi bi-house" viewBox="0 0 16 16">
                             <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
                           </svg>
@@ -27,7 +27,7 @@
                           <div class="navbar-animation"></div>
                 </li>
                 <li class="item-navigation">
-                    <a class="link-navigation" href="">
+                    <a class="link-navigation" href="#container-apresentation">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(182, 182, 182)" class="bi bi-calculator" viewBox="0 0 16 16">
                             <path d="M12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
                             <path d="M4 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5z"/>
@@ -36,7 +36,7 @@
                         <div class="navbar-animation"></div>
                 </li>
                 <li class="item-navigation">
-                    <a class="link-navigation" href="">
+                    <a class="link-navigation" href="#container-prices">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(182, 182, 182)" class="bi bi-cash-coin" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8m5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0"/>
                             <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195z"/>
@@ -47,7 +47,7 @@
                         <div class="navbar-animation"></div>
                 </li>
                 <li class="item-navigation">
-                    <a class="link-navigation" href="">
+                    <a class="link-navigation" href="#container-contact">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="rgb(182, 182, 182)" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
                             <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"/>
                           </svg>
@@ -216,27 +216,37 @@
                 </table>
             </div>
 
-            <button id="subscribe-button">
-                Quero me inscrever agora
-            </button>
+            <div class="apresentation-slide apresentation-reverse apresentation-subscribe">
+                <div class="apresentation-content">
+                    <h3>Não Perca Mais Tempo e Dinheiro!</h3>
+                    <p>Transforme sua vida financeira com nosso app. Organize suas finanças, reduza gastos e alcance suas metas rapidamente. Junte-se aos milhares de usuários satisfeitos e comece a viver com mais tranquilidade. Faça sua escolha agora!</p>
+                    <button id="subscribe-button">
+                        Quero me inscrever agora
+                    </button>
+                </div>
+                <img src="./assets/imgs/ilustrator3d.png" alt="Imagem de gestão financeira">
+            </div>
+
         </section>
 
         <section id="container-contact">
-            <form id="contact-form">
+            <div class="contact-content">
                 <h4>Contato</h4>
                 <p>Deixe seus dados para estar por dentro de novidades e atualizações do app</p>
-
+                <img src="./assets/imgs/ilustratorContact.png" alt="Imagem Ilustrativa de contato">
+            </div>
+            <form id="contact-form">
                 <div class="forms-inputs">
-                    <label for="name">Nome completo:</label>
+                    <label for="name">Nome completo</label>
                     <input class="forms-input" type="text" name="name" placeholder="Seu nome completo">
 
-                    <label for="age">Idade:</label>
+                    <label for="age">Idade</label>
                     <input class="forms-input" type="number" name="age" placeholder="Sua idade">
 
-                    <label for="email">E-mail:</label>
+                    <label for="email">E-mail</label>
                     <input class="forms-input" type="email" name="email" placeholder="Seu melhor e-mail">
 
-                    <label for="phone">Telefone:</label>
+                    <label for="phone">Telefone</label>
                     <input class="forms-input" type="text" name="phone" placeholder="Telefone para contato">
                 </div>
 
