Finalizando última configurações da página

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="box-prices hiddenRight">
                 <table class="table-prices">
                     <thead class="table-prices-head">
-                        <tr>
+                        <tr class="table-prices-columns">
                             <th></th>
                             <th>Standard<br><br><span>Grátis</span></th>
                             <th>Pro<br><br><span>R$29,90</span></th>
@@ -108,105 +108,105 @@
                     </thead>
 
                     <tbody class="table-prices-body">
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Rastreamento de despesas</th>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Relatórios mensais</th>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Alertas de contas</th>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Suporte por e-mail</th>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Sincronização bancária</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Relatórios avançados</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Orçamento personalizado</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Exportação de dados</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Sem anúncios</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Suporte prioritário</th>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>consultoria financeira</th>
                             <td></td>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>planejamento de investimentos</th>
                             <td></td>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Integração com outros apps</th>
                             <td></td>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
                         
-                        <tr>
+                        <tr class="table-prices-lines">
                             <th>Backup na nuvem</th>
                             <td></td>
                             <td></td>
                             <td><img src="./assets/imgs/icons/checkIcon.svg" alt="Icon Check"></td>
                         </tr>
 
-                        <tr>
+                        <tr class="table-prices-buttons">
                             <th></th>
                             <td><button class="table-prices-button">Escolher Plano</button></td>
                             <td><button class="table-prices-button">Escolher Plano</button></td>
