--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinPlanner APP</title>
+    <link rel="icon" href="../../assets/imgs/icons/wallet-fill.svg"" type="image/svg+xml">
 </head>
 <body>
     <h1>Olá mundo!</h1>
