Finalizando menu lateral

--- a/src/pages/appRelatorios.html
+++ b/src/pages/appRelatorios.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinPlanner APP</title>
     <link rel="stylesheet" href="../../assets/styles/style.css">
-    <link rel="icon" href="../../assets/imgs/icons/wallet-fill.svg"" type="image/svg+xml">
+    <link rel="icon" href="../../assets/imgs/icons/wallet-fill.svg"" type=" image/svg+xml">
 </head>
+
 <body>
     <main class="main">
         <header class="menu-lateral-app">
             <div>
-                <div class="title-project-lateral">
-                    <img src="../../assets/imgs/icons/wallet-fill.svg" alt="Logo FinPlanner">
-                    <h1 class="name-project">finplanner</h1>
+
+                <div>
+                    <div class="title-project-lateral">
+                        <img src="../../assets/imgs/icons/wallet-fill.svg" alt="Logo FinPlanner">
+                        <h1 class="name-project">finplanner</h1>
+                    </div>
                 </div>
+
+                <nav class="cabecalho-navegacao">
+                    <ul class="navegacao-lista">
+                        <li>
+                            <img src="../../assets/imgs/icons/relatorios.svg" alt="Icone Relatórios">
+                            <a href="">Relatórios</a>
+                        </li>
+                        <li>
+                            <img src="../../assets/imgs/icons/ganhos.svg" alt="Icone Ganhos">
+                            <a href="">Ganhos</a>
+                        </li>
+                        <li>
+                            <img src="../../assets/imgs/icons/gastos.svg" alt="Icone Gastos">
+                            <a href="">Gastos</a>
+                        </li>
+                        <li>
+                            <img src="../../assets/imgs/icons/conversor.svg" alt="Icone Conversor de moedas">
+                            <a href="">Converter moedas</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            
-            <nav class="cabecalho-navegacao">
-                <ul class="navegacao-lista">
-                    <li><a href=""></a>Relatórios</li>
-                    <li><a href=""></a>Ganhos</li>
-                    <li><a href=""></a>Gastos</li>
-                    <li><a href=""></a>Converter moedas</li>
-                </ul>
-            </nav>
+
+            <button class="btn-toggleMode">
+                <img src="../../assets/imgs/icons/sunlight.svg" alt="Modo Claro">
+                Mudar para claro
+            </button>
         </header>
-        
+
         <section class="container-relatorios">
             <h1>ola</h1>
         </section>
     </main>
 </body>
+
 </html>
