--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FinPlanner APP</title>
-    <link rel="stylesheet" href="../../assets/styles/style.css">
     <link rel="icon" href="../../assets/imgs/icons/wallet-fill.svg"" type=" image/svg+xml">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="../../assets/styles/style.css">
 </head>
 
 <body>
@@ -49,10 +50,36 @@
             </button>
         </header>
 
-        <section class="container-relatorios">
-            <h1>ola</h1>
+        <section class="container-principal">
+            <h2>Controle suas finanças Hoje!</h2>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <img src="../../assets/imgs/ImgCarousel.jpg" alt="Banner Principal 1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="../../assets/imgs/ImgCarousel2.jpg" alt="Banner Principal 2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="../../assets/imgs/ImgCarousel3.png" alt="Banner Principal 3">
+                    </div>
+                </div>
+
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+                <!-- If we need scrollbar -->
+                <div class="swiper-scrollbar"></div>
+            </div>
+
         </section>
     </main>
+
+    <script type="module" src="../js/index.js"></script>
 </body>
 
 </html>
