Criando interface gastos e ganhos

--- a/src/pages/appRelatorios.html
+++ b/src/pages/appRelatorios.html
@@ -34,11 +34,11 @@
                         </li>
                         <li>
                             <img src="../../assets/imgs/icons/ganhos.svg" alt="Icone Ganhos">
-                            <a href="">Ganhos</a>
+                            <a href="./appGanhos.html">Ganhos</a>
                         </li>
                         <li>
                             <img src="../../assets/imgs/icons/gastos.svg" alt="Icone Gastos">
-                            <a href="">Gastos</a>
+                            <a href="./appGastos.html">Gastos</a>
                         </li>
                         <li>
                             <img src="../../assets/imgs/icons/conversor.svg" alt="Icone Conversor de moedas">
