--- a/src/pages/appGastos.html
+++ b/src/pages/appGastos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinPlanner APP</title>
+    <title>FinPlanner Gastos</title>
     <link rel="icon" href="../../assets/imgs/icons/wallet-fill.svg"" type=" image/svg+xml">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="../../assets/styles/style.css">
@@ -24,7 +24,7 @@
 
                 <nav class="cabecalho-navegacao">
                     <ul class="navegacao-lista">
-                        <li class="active">
+                        <li>
                             <img src="../../assets/imgs/icons/home.svg" alt="Icone Relatórios">
                             <a href="./app.html">Menu</a>
                         </li>
@@ -36,7 +36,7 @@
                             <img src="../../assets/imgs/icons/ganhos.svg" alt="Icone Ganhos">
                             <a href="./appGanhos.html">Ganhos</a>
                         </li>
-                        <li>
+                        <li class="active">
                             <img src="../../assets/imgs/icons/gastos.svg" alt="Icone Gastos">
                             <a href="./appGastos.html">Gastos</a>
                         </li>
@@ -55,31 +55,45 @@
         </header>
 
         <section class="container-principal container-banner">
-            <h2>Controle suas finanças Hoje!</h2>
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <img src="../../assets/imgs/ImgCarousel.jpg" alt="Banner Principal 1">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="../../assets/imgs/ImgCarousel2.jpg" alt="Banner Principal 2">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="../../assets/imgs/ImgCarousel3.png" alt="Banner Principal 3">
+            <div class="campo-informacoes">
+                <div class="controles">
+                    <input type="search" placeholder="Buscar seus gastos">
+                    <div class="controles-buttons">
+                        <button class="btn-reset">
+                            <img src="../../assets/imgs/icons/refresh.svg" alt="Resetar Lista">
+                            <p>Resetar Lista</p>
+                        </button>
+                        <button class="btn-add">
+                            <img src="../../assets/imgs/icons/plus.svg" alt="Adicionar item">
+                            <p>Adicionar</p>
+                        </button>
                     </div>
                 </div>
+                
+                <div class="lista-dados">
+                    <ul>
+                        <li class="lista-item">
+                            <div class="item-description">
+                                <h3>Descrição</h3>
+                                <p>Informação adicional</p>
+                            </div>
+                            
+                            <p id="data">27/07/2024</p>
 
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
+                            <span id="price">R$ 1500,00</span>
 
-                <!-- If we need scrollbar -->
-                <div class="swiper-scrollbar"></div>
+                            <div class="item-buttons">
+                                <img id="item-edit" src="../../assets/imgs/icons/penEdit.svg" alt="Editar">
+                                <img id="item-delete" src="../../assets/imgs/icons/trash.svg" alt="Deletar">
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
+            <div class="valor-total">
+                Total R$ 1.500,00
+            </div>
         </section>
     </main>
 
