Ajustando configurações dos forms

--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -127,7 +127,7 @@
                             Fechar
                         </button>
                         
-                        <button type="submit" class="formApp-button btn-check">
+                        <button name="btnSubmitGanhos" id="buttonSubmit" class="formApp-button btn-check">
                             Concluido
                         </button>
                     </div>
