--- a/src/pages/appGastos.html
+++ b/src/pages/appGastos.html
@@ -127,7 +127,7 @@
                             Fechar
                         </button>
                         
-                        <button class="formApp-button btn-check">
+                        <button name="btnSubmitGastos" id="buttonSubmit" class="formApp-button btn-check">
                             Concluido
                         </button>
                     </div>
