Lendo LS e Criando elementos HTML

--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -71,20 +71,20 @@
                 </div>
                 
                 <div class="lista-dados">
-                    <ul>
+                    <ul id="listDataGanhos">
                         <li class="lista-item">
                             <div class="item-description">
-                                <h3>Descrição</h3>
-                                <p>Informação adicional</p>
+                                <h3 class="item-descriptionTitle">Descrição</h3>
+                                <p class="item-descriptionInfos">Informação adicional</p>
                             </div>
                             
-                            <p id="data">27/07/2024</p>
+                            <p class="item-data">27/07/2024</p>
 
-                            <span id="price">R$ 1500,00</span>
+                            <span class="item-price">R$ 1500,00</span>
 
-                            <div class="item-buttons">
-                                <img id="item-edit" src="../../assets/imgs/icons/penEdit.svg" alt="Editar">
-                                <img id="item-delete" src="../../assets/imgs/icons/trash.svg" alt="Deletar">
+                            <div>
+                                <img id="item-edit" class="item-button" src="../../assets/imgs/icons/penEdit.svg" alt="Editar">
+                                <img id="item-delete" class="item-button" src="../../assets/imgs/icons/trash.svg" alt="Deletar">
                             </div>
                         </li>
                     </ul>
