Melhorando funções de leitura/criação do LocalStorage

--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -71,23 +71,7 @@
                 </div>
                 
                 <div class="lista-dados">
-                    <ul id="listDataGanhos">
-                        <li class="lista-item">
-                            <div class="item-description">
-                                <h3 class="item-descriptionTitle">Descrição</h3>
-                                <p class="item-descriptionInfos">Informação adicional</p>
-                            </div>
-                            
-                            <p class="item-data">27/07/2024</p>
-
-                            <span class="item-price">R$ 1500,00</span>
-
-                            <div>
-                                <img id="item-edit" class="item-button" src="../../assets/imgs/icons/penEdit.svg" alt="Editar">
-                                <img id="item-delete" class="item-button" src="../../assets/imgs/icons/trash.svg" alt="Deletar">
-                            </div>
-                        </li>
-                    </ul>
+                    <ul id="listDataGanhos"></ul>
                 </div>
             </div>
 
