Criando lógica para page relatórios

--- a/src/pages/appGastos.html
+++ b/src/pages/appGastos.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="valor-total">
+            <div id="totalGastosPage" class="valor-total">
                 Total R$ 1.500,00
             </div>
         </section>
