--- a/src/pages/appRelatorios.html
+++ b/src/pages/appRelatorios.html
@@ -59,18 +59,18 @@
                 <div class="relatorio-valores">
                     <div class="valores-ganhos">
                         <p>Ganhos</p>
-                        <span>R$ 1500,00</span>
+                        <span id="relatorio-ganhos">R$ 0</span>
                     </div>
                     <div class="valores-gastos">
                         <p>Gastos</p>
-                        <span>R$ 1700,00</span>
+                        <span id="relatorio-gastos">R$ 0</span>
                     </div>
                 </div>
                 
                 <div class="relatorio-saldo">
                     <div class="valores-saldo">
                         <p>Saldo Total</p>
-                        <span>R$ 2000,00</span>
+                        <span id="relatorio-saldo">R$ 0</span>
                     </div>
                 </div>
             </div>
