--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -75,8 +75,8 @@
                 </div>
             </div>
 
-            <div class="valor-total">
-                Total R$ 1.500,00
+            <div id="totalGanhosPage" class="valor-total">
+                Total R$ 00,00
             </div>
         </section>
 
