--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             <img src="../../assets/imgs/icons/conversor.svg" alt="Icone Conversor de moedas">
-                            <a href="">Converter moedas</a>
+                            <a href="./conversor.html">Converter moedas</a>
                         </li>
                     </ul>
                 </nav>
