--- a/src/pages/appGanhos.html
+++ b/src/pages/appGanhos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="htmlApp">
 
 <head>
     <meta charset="UTF-8">
@@ -49,15 +49,15 @@
             </div>
 
             <button class="btn-toggleMode">
-                <img src="../../assets/imgs/icons/sunlight.svg" alt="Modo Claro">
-                Mudar para claro
+                <img src="../../assets/imgs/icons/theme.svg" alt="Modo Claro">
+                Mudar de Tema
             </button>
         </header>
 
         <section class="container-principal container-banner">
             <div class="campo-informacoes">
                 <div class="controles">
-                    <input type="search" placeholder="Buscar seus ganhos">
+                    <h2 class="text-controles">Adicione os seus ganhos aqui!</h2>
                     <div class="controles-buttons">
                         <button id="buttonFilterGanhos" class="btn-reset">
                             <img src="../../assets/imgs/icons/refresh.svg" alt="Resetar Lista">
