--- a/src/pages/conversor.html
+++ b/src/pages/conversor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="htmlApp">
 
 <head>
     <meta charset="UTF-8">
@@ -49,8 +49,8 @@
             </div>
 
             <button class="btn-toggleMode">
-                <img src="../../assets/imgs/icons/sunlight.svg" alt="Modo Claro">
-                Mudar para claro
+                <img src="../../assets/imgs/icons/theme.svg" alt="Modo Claro">
+                Mudar de Tema
             </button>
         </header>
 
